--- a/ChatApp/static/css/auth.css
+++ b/ChatApp/static/css/auth.css
@@ -7,14 +7,16 @@
 body {
   height: 100svh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
+  overflow: auto;
   font-family: "M PLUS 1p", sans-serif;
 }
 
 .auth-wrapper {
   max-width: 430px;
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -35,16 +37,23 @@ body {
 }
 
 .auth-form {
-  width: 70%;
+  width: 260px;
   min-height: 240px;
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   justify-content: space-evenly;
-}  
+  margin: 0 auto;
+}
 
 .auth-form-inputs {
-  display: block;
+  width: 100%;
+  display: flex;
   flex-direction: column;
+  gap: 0px;
+}
+
+.auth-form-inputs label {
+  text-align: start;
 }
 
 .auth-form input {
@@ -66,6 +75,7 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 32px;
+  margin-top: 24px;
 }
 
 .auth-button {
