--- a/ChatApp/templates/channels/home.html
+++ b/ChatApp/templates/channels/home.html
@@ -1,4 +1,3 @@
-
 {% extends 'base.html' %}
 {% block stylesheet %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
@@ -10,7 +9,7 @@
 {% block body %}
 
 <div class="home-wrapper">
-  {% include 'channels/header.html' %}
+  {% include 'header.html' %}
   <main>
     <div class="main-contents">
       <div class="main">
