--- a/ChatApp/templates/chat/chat.html
+++ b/ChatApp/templates/chat/chat.html
@@ -17,22 +17,26 @@
       <!-- メッセージが0件ではない（存在する）ときに処理を続ける -->
       {% if messages|length > 0 %}
         <!-- messagesリストの値をmassageに代入するループ -->
-        {% for messages in messages %}
+        {% for messages in messages%}
           <!-- 渡されたIDとユーザIDが一致すればmassages-self（自身）として処理 -->
           {% if messages.user_id == user_id %}
             <div class="massages-self">
-              <p>{{ messages.message }}</p>
+              <div class="bubble">
+               <p>{{ messages.message }}</p>
+              </div>
               <form
-              class="delete-form"
-              action="{{ url_for( 'chat.delete_messages', channel_id=channels.channel_id, message_id=messages.message_id )}}"
-              method="post">
+                class="delete-form"
+                action="{{ url_for( 'chat.delete_messages', channel_id=channels.channel_id, message_id=messages.message_id )}}"
+                method="post">
                 <button id="openModal" class="delete" type="submit">削除</button>
               </form>
             </div>
           {% else %}
             <div class="massages-other">
               <p class="name">{{ messages.user_name }}</p>
-              <p>{{ messages.message }}</p>
+              <div class="bubble">
+                <p>{{ messages.message }}</p>
+              </div>
             </div>
           {% endif %}
         {% endfor %}
