--- a/ChatApp/static/css/chat.css
+++ b/ChatApp/static/css/chat.css
@@ -185,7 +185,7 @@ main {
 }
 
 /* ===== 削除ボタン ===== */
-.delete {
+.openModal {
   border: none;
   background: none;
   color: #000000;
@@ -234,5 +234,60 @@ main {
   width: 48px;
   height: auto;
   object-fit: contain;
-  margin: 8px 16px;
+  margin: 4px;
+}
+
+/* ===== モーダル ===== */
+
+.modal {
+  display: none;
+  position: fixed;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+  background-color: rgba(0,0,0,0.35);    /* 半透明 */
+}
+
+.modal-content {
+  width: 300px;
+  height: auto;
+  padding: 20px;
+  border-radius: 12px;
+  text-align: center;
+  background-color: #F3F2F2;
+  line-height: 80px;
+}
+
+#confirm {
+  color: #0F5A5D;
+}
+
+#u_msg {
+  width: 80%;
+  margin: 0 auto;
+  border-radius: 12px;
+  background-color: #D9D9D9;
+  color: #0F5A5D;
+}
+
+.modal button {
+  height: 36px;
+  min-width: 60px;
+  padding: 8px;
+  border-radius: 12px;
+  border: none;
+  margin: 0 12px;
+  cursor: pointer;}
+
+#delete {
+  background-color: #0F5A5D;
+  color: #FFFFFF;
+}
+
+#cancel {
+  background-color: #D9D9D9;
+  color: #0F5A5D;
 }
