--- a/ChatApp/static/css/chat.css
+++ b/ChatApp/static/css/chat.css
@@ -1,326 +1,307 @@
-* { 
+* {
   margin: 0;
-  padding: 0; 
-  box-sizing: border-box; 
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   height: 100svh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  overflow: auto;
   font-family: "M PLUS 1p", sans-serif;
 }
 
-/* home-wrapperというクラスはhtml内に存在しない */
-.home-wrapper {
+.chat-wrapper {
   max-width: 430px;
   width: 100%;
   height: 100%;
+  padding-top: 80px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-  gap: 16px;
-  background-color: #7dd3dc;
+  background-color: #7DD3DC; 
 }
 
-.back, .hnberger {
-  cursor: pointer;
-  height: 32px;
-  width: 32px;
-  object-fit: contain;
-}
+/* ======== ヘッダー ======== */
 
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: white;
-  padding: 8px 16px;
+.header {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  /* positionで画面上部に固定して transformでwrapperの中央位置にする */
   width: 100%;
-  z-index: 1;
-}
-
-.header-left, .header-right {
-  align-items: center;
-  flex: 0 0 auto;
-  display: flex; 
-}
-
-/* スペルミス container */
-.header-contener {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-}
-
-.header-center {
-  flex: 1;
-  text-align: center;
-}
-
-.header-img {
-  display: none;
-  align-items: center;
-}
-
-#drawer-toggle:checked ~ header .header-img {
-  display: block;
-  width: 30vw;
-  max-width: 147px;
-  z-index: 3;
-}
-
-.channel {
-  margin: 0;
+  max-width: 430px;
+  height: 80px;
   display: flex;
   flex-direction: column;
-  font-size: 32px;            /* 2rem → 32px pxで統一 */
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 100%;
-}
-
-/* ===== menu ===== */
-
-.nav-right {
-  width: 75%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
-  font-size: 16px;
-}
-
-/* nav は header内じゃないのでheaderを除外 */
-#drawer-toggle:checked ~ .drawer_nav {
-  right: 0;
-}
-
-#drawer-toggle:checked ~ header .drawer_btn .hnberger {
-  display: none;
-}
-
-#drawer-toggle:checked ~ header .user {
-  display: none;
-}
-
-#drawer-toggle:checked ~ header .back {
-  display: none;
-}
-
-#drawer-toggle:checked ~ header .drawer_btn .back_png {
-  display: inline;
-  width: 48px;                /* 10vw → 48px pxで統一 */
-  max-width: 48px;
-}
-
-#drawer-toggle:checked ~ header .channel {
-  display: none;
-}
-
-.back_png {
-  display: none;
-}
-
-#drawer-toggle {
-  display: none;
-}
-
-/* メニュー本体：はじめは画面外に隠す */
-.drawer_nav {
-  position: fixed; 
-  top: 0; 
-  right: -100%;               /* はじめは画面右側に出しておく */
-  width: 75%;
-  height: 100%;
-  background: #fff;
-  transition: right .2s ease; 
+  font-size: 20px;
+  background-color: #f6f9f3;
   z-index: 2;
 }
 
-.drawer_btn {
-  display: inline-block;
-  padding: 8px 32px;
-  cursor: pointer;
-}
-
-.nav-right ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.drawer_nav li {
+.header-inner {
+  width: 94%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 32px;
+  align-items: end;
+  margin-bottom: 12px;
+  background-color: #f6f9f3;
 }
 
-.nav-right a {
+.header-texts {
+  text-align: center;
+  flex: 1;
+}
+
+.header img {
+  height: 48px;
+  width: auto;
+  background-color: #f6f9f3;
+}
+
+.channel { font-size: 20px; }
+.user { font-size: 16px; }
+
+/* ======== ハンバーガー ======== */
+
+/* はじめは表示させない */
+#drawer-toggle { display: none; }
+.close-btn { display: none; }
+
+/* ハンバーガーメニューをタップで表示させる */
+#drawer-toggle:checked ~ .header .hnberger { display: none; }    /* ハンバーガーOFF */ 
+#drawer-toggle:checked ~ .header .close-btn { display: inline; }  /* 閉じるON */
+
+/* ===== メニュー ===== */
+
+.drawer_nav {
+  position: fixed;
+  top: 80px;
+  right: -100%;    /* 右側・画面外に出しておく */
+  width: 60%;
+  max-width: 280px;
+  text-align: end;
+  line-height: 4;
+  padding: 12px 28px;
+  height: calc(100% - 80px);    /* 画面全体 - ヘッダーの高さ80px */
+  background: #C0E6EA;
+  transition: right .25s ease;
+  z-index: 1;
+}
+
+#drawer-toggle:checked ~ .drawer_nav {
+  /* 画面幅（100vh）から最大430pxを引いた余白÷2（半分）にして右側に寄せる
+  これによってbodyじゃなくwrapperの右端から出てくる */
+  right: calc((100vw - min(430px, 100vw)) / 2);
+}
+
+.drawer_nav ul { list-style: none; }
+
+.drawer_nav a {
+  display: block;
+  padding: 20px 24px;
   text-decoration: none;
   color: #0F5A5D;
-  font-size: 18px;            /* 5vw → 18px に変更 */
+  font-size: 16px;
 }
 
-/* ===== chat ===== */
-
-.chat {
-  background-color: #7dd3dc;
-}
-
-.user {
-  margin: 0;
-  text-align: center;
-}
-
-.submission_form {
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%); 
-  width: 430px;
-  max-width: 100%;
-  display: flex;
-  align-items: center;
-  padding: 8px;
-  gap: 8px;
-  background-color: white;
-  z-index: 1;
-  border-top-left-radius: 16px;
-  border-top-right-radius: 16px;
-}
-
-.submission {
-  width: 48px;
-  height: auto;
-  margin: 8px 16px;
-}
-
-.chat-form {
-  display: flex;
+/* ===== 本文 ===== */
+main {
   flex: 1 1 auto;
-  width: 100%;
-  gap: 8px;
-  min-width: 0;
-}
-
-.chat-form input[type="text"] {
-  flex: 1;
-  min-width: 0;
-  padding: 16px;              /* 1rem → 16px pxで統一 */
-  font-size: 16px;            /* 1rem → 16px pxで統一 */
-  border-radius: 24px;
-  border: 1px solid #ccc;
-}
-
-.send-btn {
-  flex: 0 0 auto;
-  border: none;
-  background: white;
-  cursor: pointer;
+  display: flex;
 }
 
 .chat-container {
+  flex: 1 1 auto;
   display: flex;
   flex-direction: column;
-  flex: 1;
-  width: 100%;
   overflow-y: auto;
-  padding: 8px;
-  padding-bottom: 80px;
+  padding: 12px;
+  gap: 10px;
+  background-color: #7DD3DC;
+  padding-bottom: 120px;
+  /* 送信フォームに隠れないための下余白 */
 }
 
-.chat-container > div {
+/* ===== 吹き出し共通 ===== */
+.massages-self, .massages-other {
   max-width: 60%;
+  margin: 8px 0;
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+  line-height: 1.5;
+  word-break: break-word;
+  /* word-breakはメッセージを吹き出し内で改行するためのプロパティ */
+}
+
+.bubble {
   padding: 16px 24px;
   border-radius: 10px;
-  margin: 16px 0;
-  position: relative;
+  position: relative;   /* しっぽのための基準 */
 }
 
-.othercomment {
+/* ===== 自分（右側） ===== */
+.massages-self {
+  align-self: flex-end;
+}
+.massages-self .bubble {
   background: #1A8BA6;
-  color: white;
-  align-self: flex-start; 
-  position: relative;
-  border-radius: 10px;
+  color: #FFFFFF;
 }
-
-.othercomment .name2 {
+.massages-self .bubble::after {
+  content: "";
   position: absolute;
-  top: -20px;
-  left: 0;
-  font-size: 14px;
-  color: #333;
+  top: 12px;
+  right: -10px;
+  border-width: 10px;
+  border-style: solid;
+  border-color: transparent transparent transparent #1A8BA6;
+}
+.massages-self .delete-form {
+  text-align: right;
+  margin-top: 2px; /* 吹き出しに削除ボタンを近づける */
 }
 
-.othercomment::after {
+/* ===== 相手（左側） ===== */
+.massages-other {
+  align-self: flex-start;
+}
+.massages-other .bubble {
+  background: #5CA8B6;
+  color: #fff;
+}
+.massages-other .bubble::after {
   content: "";
   position: absolute;
   top: 12px;
   left: -10px;
   border-width: 10px;
   border-style: solid;
-  border-color: transparent #1A8BA6 transparent transparent;
+  border-color: transparent #5CA8B6 transparent transparent;
 }
 
-.comment {
-  background: #087E83;
-  color: white;
-  align-self: flex-start; 
-  position: relative;
-  border-radius: 10px;
-}
-
-.comment::after {
-  content: "";
-  position: absolute;
-  top: 12px;
-  right: -10px; 
-  border-width: 10px;
-  border-style: solid;
-  border-color: transparent transparent transparent #087E83;
-}
-
-.comment .name1 {
-  position: absolute;
-  top: -20px;
-  right: 56px;
-  font-size: 14px;
-  color: #333;
-}
-
-.threecomment {
-  border-color: #1A8BA6;
-  background: #087E83;
-  color: white;
-  align-self: flex-end;
-  position: relative;
-}
- 
-.threecomment .delete {
-  color: black;
+/* ===== 削除ボタン ===== */
+.delete {
+  border: none;
+  background: none;
+  color: #000000;
   font-size: 12px;
-  position: absolute;
-  bottom: -20px;
-  right: -6px;
   cursor: pointer;
 }
 
-.threecomment::after {
-  content: "";
-  position: absolute;
-  top: 10px;
-  right: -20px;
-  border-width: 10px;
-  border-style: solid;
-  border-color: transparent transparent transparent #087E83;
+/* ===== 送信フォーム ===== */
+.submission_form {
+  position: fixed;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  width: 100%;
+  max-width: 430px;
+  background: #f6f9f3;
+  z-index: 1;
+  padding: 12px;
+  border-top: 1px solid #ddd;
+}
+
+.chat-form {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.chat-form input[type="text"] {
+  flex: 1 1 auto;
+  min-width: 0;
+  padding: 24px;
+  font-size: 16px;
+  border-radius: 12px;
+  border: 1px solid #ccc;
+  outline: none;
+  background: #fff;
+}
+
+.send-btn {
+  border: none;
+  background: transparent;
+  cursor: pointer;
+}
+
+.submission {
+  width: 48px;
+  height: auto;
+  object-fit: contain;
+  margin: 8px 16px;
+}
+
+/* モーダル */
+
+#modalDelete {
+  display: none;
+  max-width: 400px;
+  position: fixed;
+  /* left: 0;
+  right: 0; */
+  width: 100%;
+  height: 100%;
+  /* display: flex; */
+  justify-self: center;
+  align-items: center;
+  z-index: 1;
+  background-color: #9bcad0;
+}
+
+.modal-content {
+  margin: 15% auto;
+  width: 90%;
+  padding: 20px;
+  border-radius: 12px;
+  text-align: center;
+  background-color: #F3F2F2;
+  line-height: 80px;
+  animation-name: popup;
+  animation-duration: 1.1s;
+}
+
+@keyframes popup {
+  from{
+    transform: translateY(150%);
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+}
+
+#confirm {
+  color: #0F5A5D;
+}
+
+#u_msg {
+  width: 80%;
+  margin: 0 auto;
+  border-radius: 12px;
+  background-color: #D9D9D9;
+  color: #0F5A5D;
+}
+
+button {
+  width: 28%;
+  padding: 8px;
+  border-radius: 12px;
+  border: none;
+  margin: 0 12px;
+}
+
+#delete {
+  background-color: #0F5A5D;
+  color: #FFFFFF;
+}
+
+#cancel {
+  background-color: #D9D9D9;
+  color: #0F5A5D;
 }
