--- a/ChatApp/static/css/modal.css
+++ b/ChatApp/static/css/modal.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -14,7 +14,7 @@ body {
 }
 
 .modal {
-  /* display: none; */
+  display: none;
   max-width: 430px;
   width: 100%;
   height: 100%;
@@ -62,4 +62,4 @@ button {
 #cancel {
   background-color: #D9D9D9;
   color: #0F5A5D;
-}
+} */
