--- a/ChatApp/templates/chat/modal.html
+++ b/ChatApp/templates/chat/modal.html
@@ -1,21 +1,20 @@
-{% extends 'base.html' %}
-{% block stylesheet %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/modal.css') }}">
-{% endblock %}
-{% block title %}
-<title>delete_msg</title>
-{% endblock %}
-
-{% block body %}
-<button id="openModal">open</button>
-  <div id="modalDelete" class="modal">
-    <p id="confirm">このメッセージを削除しますか？</p>
-    <p id="u_msg">{{u_msg}}メッセージ内容</p>
-    <button id="delete">削除</button>
-    <button id="cancel">キャンセル</button>
-  </div>
-</div>
-{% endblock %}
+<!-- メッセージが0件ではない（存在する）ときに処理を続ける -->
+{% if messages|length > 0 %}
+  <!-- messagesリストの値をmassageに代入するループ -->
+  {% for messages in messages%}
+    <!-- 渡されたIDとユーザIDが一致すればmassages-self（自身）として処理 -->
+    {% if messages.user_id == user_id %}
+      <div id="modalDelete" class="modal">
+        <div class="modal-content">
+          <p id="confirm">このメッセージを削除しますか？</p>
+          <p id="u_msg"></p>
+          <button id="delete">削除</button>
+          <button id="cancel">キャンセル</button>
+        </div>
+      </div>
+    {% endif %}  
+  {% endfor %}
+{% endif %}
 
 {% block scripts %}
   <script src="{{ url_for('static', filename='js/modal.js') }}"></script>
