--- a/ChatApp/static/css/modal.css
+++ b/ChatApp/static/css/modal.css
@@ -1,4 +1,5 @@
-/* * {
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -62,4 +63,4 @@ button {
 #cancel {
   background-color: #D9D9D9;
   color: #0F5A5D;
-} */
+}
