--- a/ChatApp/static/css/chat.css
+++ b/ChatApp/static/css/chat.css
@@ -151,7 +151,7 @@ main {
 .massages-self .balloon {
   background: #1A8BA6;
   color: #FFFFFF;
-  margin: 0 8px;
+  margin: 0 12px;
 }
 .massages-self .balloon::after {
   content: "";
@@ -174,7 +174,7 @@ main {
 .massages-other .balloon {
   background: #5CA8B6;
   color: #fff;
-  margin: 0 8px;
+  margin: 0 12px;
 }
 .massages-other .balloon::after {
   content: "";
@@ -193,6 +193,7 @@ main {
   color: #000000;
   font-size: 12px;
   cursor: pointer;
+  margin: 0 12px;
 }
 
 /* ===== 送信フォーム ===== */
@@ -261,6 +262,18 @@ main {
   text-align: center;
   background-color: #F3F2F2;
   line-height: 80px;
+  animation-name: popup;
+  animation-duration: 0.5s;
+}
+
+@keyframes popup {
+  from{
+    transform: translateY(150%);
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
 }
 
 #confirm {
@@ -270,9 +283,12 @@ main {
 #u_msg {
   width: 80%;
   margin: 0 auto;
+  padding: 12px;
   border-radius: 12px;
   background-color: #D9D9D9;
   color: #0F5A5D;
+  line-height: 1.5;
+  word-break: break-word;
 }
 
 .modal button {
