--- a/ChatApp/templates/channels/channels.html
+++ b/ChatApp/templates/channels/channels.html
@@ -7,18 +7,18 @@
 {% endblock %}
 
 {% block body %}
+
 <div class="home-wrapper">
-{% include "header.html" %}
+  {% include 'header.html' %}
   <main>
     <div class="main-contents">
       <div class="area-name">
         {{ areas.area_name }}
       </div>
-        <div class="prefectures">
-          {% for ch in channels %}
-          <a href="#">{{ ch.prefecture }}</a>
-          <!-- href内のURLは各チャット画面にする -->
-          {% endfor %}
+      <div class="prefectures">
+        {% for channels in channels %}
+        <a href="{{ url_for( 'chat.chat_view', channel_id=channels.channel_id )}}">{{ channels.prefecture }}</a>
+        {% endfor %}
       </div>
     </div>
   </main>
