--- a/ChatApp/templates/header.html
+++ b/ChatApp/templates/header.html
@@ -1,9 +1,16 @@
+<input type="checkbox" id="drawer-toggle" hidden>
+
 {% if page == 'home' %}
 <header class="header">
   <div class="header-inner">
     <img class="header-logo" src="{{ url_for('static', filename='img/Tabitalkロゴ.png') }}" alt="ロゴ">
     <span class="header-uname">{{ session['user_name'] }}</span>
-    <a class="header-menu" href="#"><img src="{{ url_for('static', filename='img/ハンバーガーメニュー.png') }}" alt="メニュー"></a>
+
+    <!-- ハンバーガー -->
+    <label for="drawer-toggle" class="drawer_btn">
+      <img src="{{ url_for('static', filename='img/ハンバーガーメニュー.png') }}" alt="メニュー" class="hnberger">
+      <img src="{{ url_for('static', filename='img/閉じる.png') }}" alt="閉じる" class="close-btn">
+    </label>
   </div>
 </header>
 
@@ -13,16 +20,42 @@
     <a class="back-btn" onclick="history.back()"><img src="{{ url_for('static', filename='img/戻る.png') }}" alt="戻る"></a>
     <img class="header-logo" src="{{ url_for('static', filename='img/Tabitalkロゴ.png') }}" alt="ロゴ">
     <span class="header-uname">{{ session['user_name'] }}</span>
-    <a class="header-menu" href="#"><img src="{{ url_for('static', filename='img/ハンバーガーメニュー.png') }}" alt="メニュー"></a>
+
+    <!-- ハンバーガー -->
+    <label for="drawer-toggle" class="drawer_btn">
+      <img src="{{ url_for('static', filename='img/ハンバーガーメニュー.png') }}" alt="メニュー" class="hnberger">
+      <img src="{{ url_for('static', filename='img/閉じる.png') }}" alt="閉じる" class="close-btn">
+    </label>
   </div>
 </header>
 
 {% elif page == 'chat' %}
 <header class="header">
   <div class="header-inner">
-    <a class="back-btn" onclick="history.back()"><img src="{{ url_for('static', filename='img/戻る.png') }}" alt="戻る"></a>
-    <span class="header-uname">{{ session['user_name'] }}</span>
-    <a class="header-menu" href="#"><img src="{{ url_for('static', filename='img/ハンバーガーメニュー.png') }}" alt="メニュー"></a>
+    <a class="back-btn" onclick="history.back()">
+      <img src="{{ url_for('static', filename='img/戻る.png') }}" alt="戻る">
+    </a>
+
+    <div class="header-texts">
+      <div class="titles">
+        <p class="channel">{{channels.prefecture}}</p>
+        <p class="user">{{ session['user_name'] }}</p>
+      </div>
+    </div>
+
+    <!-- ハンバーガー -->
+    <label for="drawer-toggle" class="drawer_btn">
+      <img src="{{ url_for('static', filename='img/ハンバーガーメニュー.png') }}" alt="メニュー" class="hnberger">
+      <img src="{{ url_for('static', filename='img/閉じる.png') }}" alt="閉じる" class="close-btn">
+    </label>
   </div>
 </header>
 {% endif %}
+
+<!-- メニュー -->
+<nav class="drawer_nav">
+  <ul>
+    <li><a href="{{ url_for('home.home_view') }}">ホーム</a></li>
+    <li><a href="{{ url_for('login_logout.login_process') }}">ログアウト</a></li>
+  </ul>
+</nav>
