タイムスタンプ位置修正

--- a/ChatApp/templates/chat/chat.html
+++ b/ChatApp/templates/chat/chat.html
@@ -29,9 +29,9 @@
                 class="delete-form"
                 action="{{ url_for( 'chat.delete_messages', channel_id=channels.channel_id, message_id=messages.message_id )}}"
                 method="post">
-                <!-- strftimeメソッドはdatetimeオブジェクトを日付や時間を指定したフォーマットの文字列に変換できる -->
-                <span>{{messages.created_at.strftime("%m.%d %H:%M")}}</span>
-                <button class="openModal" data-message="{{ messages.message }}" type="button">削除</button>
+                  <!-- strftimeメソッドはdatetimeオブジェクトを日付や時間を指定したフォーマットの文字列に変換できる -->
+                  <span class="timestamp">{{messages.created_at.strftime("%-m.%-d %H:%M")}}</span>
+                  <button class="openModal" data-message="{{ messages.message }}" type="button">削除</button>
               </form>
             </div>
           {% else %}
@@ -41,7 +41,7 @@
                 <p>{{ messages.message }}</p>
               </div>
               <!-- strftimeメソッドはdatetimeオブジェクトを日付や時間を指定したフォーマットの文字列に変換できる -->
-              <span>{{messages.created_at.strftime("%m.%d %H:%M")}}</span>
+              <span class="timestamp">{{messages.created_at.strftime("%-m.%-d %H:%M")}}</span>
             </div>
           {% endif %}
         {% endfor %}
