--- a/ChatApp/static/css/chat.css
+++ b/ChatApp/static/css/chat.css
@@ -94,9 +94,9 @@ body {
 }
 
 #drawer-toggle:checked ~ .drawer_nav {
+  right: calc((100vw - min(430px, 100vw)) / 2);
   /* 画面幅（100vh）から最大430pxを引いた余白÷2（半分）にして右側に寄せる
   これによってbodyじゃなくwrapperの右端から出てくる */
-  right: calc((100vw - min(430px, 100vw)) / 2);
 }
 
 .drawer_nav ul { list-style: none; }
@@ -116,23 +116,20 @@ main {
 }
 
 .chat-container {
-  flex: 1 1 auto;
+  flex: 1 1 auto;     /* 余白があれば伸び/なければ縮む */
   display: flex;
   flex-direction: column;
   overflow-y: auto;
   padding: 12px;
   gap: 10px;
   background-color: #7DD3DC;
-  padding-bottom: 120px;
-  /* 送信フォームに隠れないための下余白 */
+  padding-bottom: 120px;      /* 送信フォームに隠れないための下余白 */
 }
 
 /* ===== 吹き出し共通 ===== */
 .massages-self, .massages-other {
-  max-width: 60%;
+  max-width: 80%;
   margin: 8px 0;
-  display: flex;
-  flex-direction: column;
   font-size: 14px;
   line-height: 1.5;
   word-break: break-word;
@@ -148,11 +145,15 @@ main {
 /* ===== 自分（右側） ===== */
 .massages-self {
   align-self: flex-end;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: end;
 }
 .massages-self .balloon {
+  width: auto;
   background: #1A8BA6;
   color: #FFFFFF;
-  margin: 0 12px;
+  margin: 0 12px 0 8px;
 }
 .massages-self .balloon::after {
   content: "";
@@ -163,9 +164,16 @@ main {
   border-style: solid;
   border-color: transparent transparent transparent #1A8BA6;
 }
-.massages-self .delete-form {
+/* .massages-self .delete-form {
   text-align: right;
-  margin-top: 2px; /* 吹き出しに削除ボタンを近づける */
+  margin-top: 2px; 吹き出しに削除ボタンを近づける
+} */
+
+.delete-form  {
+  white-space: nowrap;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
 }
 
 /* ===== 相手（左側） ===== */
@@ -175,7 +183,7 @@ main {
 .massages-other .balloon {
   background: #5CA8B6;
   color: #fff;
-  margin: 0 12px;
+  margin: 4px 8px 0 12px;
 }
 .massages-other .balloon::after {
   content: "";
@@ -187,6 +195,16 @@ main {
   border-color: transparent #5CA8B6 transparent transparent;
 }
 
+.massages-other .balloon,
+.massages-other .timestamp {
+  display: inline-block;     /* 吹き出しとタイムスタンプを並列化 */
+  vertical-align: bottom;    /* 下揃え */
+}
+
+span {
+  font-size: 12px;
+}
+
 /* ===== 削除ボタン ===== */
 .openModal {
   border: none;
@@ -194,7 +212,7 @@ main {
   color: #000000;
   font-size: 12px;
   cursor: pointer;
-  margin: 0 12px;
+  margin: 0;
 }
 
 /* ===== 送信フォーム ===== */
