--- a/ChatApp/templates/header.html
+++ b/ChatApp/templates/header.html
@@ -1,3 +1,6 @@
+
+<input type="checkbox" id="drawer-toggle" hidden>
+
 {% if page == 'home' %}
 <header class="header">
   <div class="header-inner">
@@ -31,16 +34,16 @@
 
 {% elif page == 'chat' %}
 <header class="header">
-  <div class="header-contener"> 
-    <!-- スペルミス container -->
-    <div class="header-left">
-      <img src="{{ url_for('static', filename='img/戻る.png') }}" alt="戻る" class="back"/>
-    </div>
+  <div class="header-inner">
+    <a class="back-btn" href="{{ url_for( 'channels.channels_view', area_id=channels.area_id ) }}">
+      <img src="{{ url_for('static', filename='img/戻る.png') }}" alt="戻る">
+    </a>
 
-    <div class="header-center">
-      <img src="{{ url_for('static', filename='img/Tabitalkロゴ.png') }}" alt="Tabitalkロゴ" class="header-img"/>
-      <p class="channel">チャンネル名</p>
-      <p class="user">ユーザー名</p>
+    <div class="header-texts">
+      <div class="titles">
+        <p class="channel">{{channels.prefecture}}</p>
+        <p class="user">{{ session['user_name'] }}</p>
+      </div>
     </div>
 
     <!-- ハンバーガー -->
