--- a/ChatApp/static/css/chat.css
+++ b/ChatApp/static/css/chat.css
@@ -1,4 +1,5 @@
-* { 
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -92,118 +93,129 @@ body {
   z-index: 1;
 }
 
-#drawer-toggle:checked ~ header .header-img {
+#drawer-toggle:checked ~ .drawer_nav {
+  right: calc((100vw - min(430px, 100vw)) / 2);
+  /* 画面幅（100vh）から最大430pxを引いた余白÷2（半分）にして右側に寄せる
+  これによってbodyじゃなくwrapperの右端から出てくる */
+}
+
+.drawer_nav ul { list-style: none; }
+
+.drawer_nav a {
   display: block;
-  width: 30vw;
-  max-width: 147px;
-  z-index: 3;
-}
-
-.channel {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  font-size: 32px;            /* 2rem → 32px pxで統一 */
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 100%;
-}
-
-/* ===== menu ===== */
-
-.nav-right {
-  width: 75%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  padding: 20px 24px;
+  text-decoration: none;
+  color: #0F5A5D;
   font-size: 16px;
 }
 
-/* nav は header内じゃないのでheaderを除外 */
-#drawer-toggle:checked ~ .drawer_nav {
-  right: 0;
-}
-
-#drawer-toggle:checked ~ header .drawer_btn .hnberger {
-  display: none;
-}
-
-#drawer-toggle:checked ~ header .user {
-  display: none;
-}
-
-#drawer-toggle:checked ~ header .back {
-  display: none;
-}
-
-#drawer-toggle:checked ~ header .drawer_btn .back_png {
-  display: inline;
-  width: 48px;                /* 10vw → 48px pxで統一 */
-  max-width: 48px;
-}
-
-#drawer-toggle:checked ~ header .channel {
-  display: none;
-}
-
-.back_png {
-  display: none;
-}
-
-#drawer-toggle {
-  display: none;
-}
-
-/* メニュー本体：はじめは画面外に隠す */
-.drawer_nav {
-  position: fixed; 
-  top: 0; 
-  right: -100%;               /* はじめは画面右側に出しておく */
-  width: 75%;
-  height: 100%;
-  background: #fff;
-  transition: right .2s ease; 
-  z-index: 2;
-}
-
-.drawer_btn {
-  display: inline-block;
-  padding: 8px 32px;
-  cursor: pointer;
-}
-
-.nav-right ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.drawer_nav li {
+/* ===== 本文 ===== */
+main {
+  flex: 1 1 auto;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 32px;
 }
 
-.nav-right a {
-  text-decoration: none;
-  color: #0F5A5D;
-  font-size: 18px;            /* 5vw → 18px に変更 */
+.chat-container {
+  flex: 1 1 auto;     /* 余白があれば伸び/なければ縮む */
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  padding: 12px;
+  gap: 10px;
+  background-color: #7DD3DC;
+  padding-bottom: 120px;      /* 送信フォームに隠れないための下余白 */
 }
 
-/* ===== chat ===== */
-
-.chat {
-  background-color: #7dd3dc;
+/* ===== 吹き出し共通 ===== */
+.massages-self, .massages-other {
+  max-width: 80%;
+  margin: 8px 0;
+  font-size: 14px;
+  line-height: 1.5;
+  word-break: break-word;
+  /* word-breakはメッセージを吹き出し内で改行するためのプロパティ */
 }
 
-.user {
+.balloon {
+  padding: 16px 24px;
+  border-radius: 10px;
+  position: relative;   /* しっぽのための基準 */
+}
+
+/* ===== 自分（右側） ===== */
+.massages-self {
+  align-self: flex-end;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: end;
+}
+.massages-self .balloon {
+  width: auto;
+  background: #1A8BA6;
+  color: #FFFFFF;
+  margin: 0 12px 0 8px;
+}
+.massages-self .balloon::after {
+  content: "";
+  position: absolute;
+  top: 12px;
+  right: -20px;
+  border-width: 10px;
+  border-style: solid;
+  border-color: transparent transparent transparent #1A8BA6;
+}
+/* .massages-self .delete-form {
+  text-align: right;
+  margin-top: 2px; 吹き出しに削除ボタンを近づける
+} */
+
+.delete-form  {
+  white-space: nowrap;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+
+/* ===== 相手（左側） ===== */
+.massages-other {
+  align-self: flex-start;
+}
+.massages-other .balloon {
+  background: #5CA8B6;
+  color: #fff;
+  margin: 4px 8px 0 12px;
+}
+.massages-other .balloon::after {
+  content: "";
+  position: absolute;
+  top: 12px;
+  left: -20px;
+  border-width: 10px;
+  border-style: solid;
+  border-color: transparent #5CA8B6 transparent transparent;
+}
+
+.massages-other .balloon,
+.massages-other .timestamp {
+  display: inline-block;     /* 吹き出しとタイムスタンプを並列化 */
+  vertical-align: bottom;    /* 下揃え */
+}
+
+span {
+  font-size: 12px;
+}
+
+/* ===== 削除ボタン ===== */
+.openModal {
+  border: none;
+  background: none;
+  color: #000000;
+  font-size: 12px;
+  cursor: pointer;
   margin: 0;
-  text-align: center;
 }
 
+/* ===== 送信フォーム ===== */
 .submission_form {
   position: fixed;
   left: 50%;
@@ -261,20 +273,16 @@ body {
   background-color: rgba(0,0,0,0.35);    /* 半透明 */
 }
 
-.chat-container > div {
-  max-width: 60%;
-  padding: 16px 24px;
-  border-radius: 10px;
-  margin: 16px 0;
-  position: relative;
-}
-
-.othercomment {
-  background: #1A8BA6;
-  color: white;
-  align-self: flex-start; 
-  position: relative;
-  border-radius: 10px;
+.modal-content {
+  width: 300px;
+  height: auto;
+  padding: 20px;
+  border-radius: 12px;
+  text-align: center;
+  background-color: #F3F2F2;
+  line-height: 80px;
+  animation-name: popup;
+  animation-duration: 0.3s;
 }
 
 @keyframes popup {
